fix icon spacing

--- a/src/components/event-list/event-list.less
+++ b/src/components/event-list/event-list.less
@@ -98,6 +98,10 @@
   line-height: normal;
   height: unset;
   margin-top: 8px;
+
+  .anticon {
+    margin-left: 6px;
+  }
 }
 
 .event-list-component .card-list-component {
@@ -148,5 +152,9 @@
     margin-bottom: 0;
     color: #aaa;
     text-align: right;
+  }
+
+  .anticon {
+    margin-left: 6px;
   }
 }
